--- a/Retirement Planning/src/index.jade
+++ b/Retirement Planning/src/index.jade
@@ -37,11 +37,25 @@ html
           tr.color5
             td(colspan=2)
               div#container
-                a#animate1
-                a#animate2
-                a#animate3
-                a#animate4
-                a#animate5
+                a#animate1.red
+                a#animate2.blue
+                a#animate3.green
+                a#animate4.orange
+                a#animate5.grey
+
+        div#mark
+          fieldset
+            legend keterangan
+            a.red &nbsp;
+            span 25 tahun
+            a.blue &nbsp;
+            span 30 tahun
+            a.green &nbsp;
+            span 35 tahun
+            a.orange &nbsp;
+            span 40 tahun
+            a.grey &nbsp;
+            span 45 tahun
 
         div.error#retireError
           p Kami menganggap anda mulai pada usia 25 tahun
